Added header and photo

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+<header><h1>Cēsis</h1>
+    <h3>Pilsēta Latvijā</h3>
+    <img src="Cesis.jpg" alt="Cēsis">
+
+    <p>Cēsis ir pilsēta Latvijā, Vidzemes augstienes ziemeļu daļā, Cēsu novada administratīvais centrs. Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. Cēsis ir viena no vecākajām pilsētām Latvijā, Hanzas savienības pilsēta un viena no Livonijas ordeņa mestru rezidencēm. Cēsis ir Latvijas karoga dzimtene.</p>
+</header>
+
 <body>
     <main>
-<h1>My HomeWork</h1>
-    </main>
+
+</main>
+ 
+
 </body>
 </html>
