Added Cesu gerbonis

--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>HomeWork</title>
 </head>
 <header><h1>Cēsis</h1>
     <h3>Pilsēta Latvijā</h3>
-    <img src="Cesis.jpg" src="cesisattels2.jpg" src="cesisattels3.jpg"alt="Cēsis">
+    <img src="Cesis_gerb.png" alt="cesis">
 
-    <p>Cēsis ir pilsēta Latvijā, Vidzemes augstienes ziemeļu daļā, Cēsu novada administratīvais centrs. Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. Cēsis ir viena no vecākajām pilsētām Latvijā, Hanzas savienības pilsēta un viena no Livonijas ordeņa mestru rezidencēm. Cēsis ir Latvijas karoga dzimtene.</p>
+    <h5> Cēsis ir pilsēta Latvijā. Tā izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
+        Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. 
+        Cēsis ir viena no vecākajām pilsētām Latvijā, Hanzas savienības pilsēta un viena no Livonijas ordeņa mestru rezidencēm. 
+        Cēsis ir Latvijas karoga dzimtene.</h5>
 </header>
 
 <body>
     <main>
-
+<a href="https://lv.wikipedia.org/wiki/C%C4%93sis"></a><h3>Cēsu vēsture</h3>
+<p></p>
 </main>
  
 
