Added link to history

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <header><h1>Cēsis</h1>
     <h3>Pilsēta Latvijā</h3>
-    <img src="Cesis_gerb.png" alt="cesis">
+    <img src="Cesis_gerb.png" alt="Cēsu pilsētas ģērbonis">
 
     <h5> Cēsis ir pilsēta Latvijā. Tā izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
         Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. 
@@ -18,8 +18,9 @@
 
 <body>
     <main>
-<a href="https://lv.wikipedia.org/wiki/C%C4%93sis"></a><h3>Cēsu vēsture</h3>
-<p></p>
+<p>Spied šeit, lai uzzinātu par Cēsu pilsētas vēsturi
+<a href="https://lv.wikipedia.org/wiki/C%C4%93sis"target="_blank">Cēsu vēsture</a>.</p>
+
 </main>
  
 
