Added interesting places

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HomeWork</title>
+    <title>Iveta Jaunzema HMNr01</title>
 </head>
-<header><h1>Cēsis</h1>
+<header>
+    <h1 id="up">Cēsis</h1>
     <h3>Pilsēta Latvijā</h3>
     <img src="Cesis_gerb.png" alt="Cēsu pilsētas ģērbonis">
-
-    <h5> Cēsis ir pilsēta Latvijā. Tā izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
+    <img src="Cesis_Karogs.png" alt="Cēsu pilsētas Karogs">
+    <h4> Cēsis ir pilsēta Latvijā. Tā izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
         Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. 
         Cēsis ir viena no vecākajām pilsētām Latvijā, Hanzas savienības pilsēta un viena no Livonijas ordeņa mestru rezidencēm. 
-        Cēsis ir Latvijas karoga dzimtene.</h5>
+        Cēsis ir Latvijas karoga dzimtene.</h4>
 </header>
 
 <body>
@@ -21,8 +22,27 @@
 <p>Spied šeit, lai uzzinātu par Cēsu pilsētas vēsturi
 <a href="https://lv.wikipedia.org/wiki/C%C4%93sis"target="_blank">Cēsu vēsture</a>.</p>
 
+<p>Insteresantākās vietas, kuras apskatīt Cēsīs un Cēsu rajonā:</p>
+  <ul>
+    <li>Cēsu pils komplekss</li>
+    <li>Cēsu Vecpilsēta</li>
+    <li>Koncertzāle "Cēsis"</li>
+    <li>Kamieļu parks "Rakši"</li>
+    <li>Āraišu arheoloģiskais parks</li>
+    <li>Aktīvās atpūtas komplekss "Ozolkalns"</li>
+    <li>Ērgļu klintis</li>
+    <li>Zvārtes iezis</li>
+    <li>Ungurmuiža</li>
+    <li>Līču – Laņģu klintis</li>
+  </ul>
+
+  
 </main>
- 
+ <footer>
+    <a href="#up">
+        <img src="img/up.png" width="20" alt="bulta uz augšu"
+    ></a>
+ </footer>
 
 </body>
 </html>
