--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <header>
     <h1 id="up">Cēsis</h1>
     <h3>Pilsēta Latvijā</h3>
-    <img src="Cesis_gerb.png" alt="Cēsu pilsētas ģērbonis">
-    <img src="Cesis_Karogs.png" alt="Cēsu pilsētas Karogs">
+    <img src="Cesis_gerb.png" width="400" alt="Cēsu pilsētas ģērbonis">
+    <img src="Cesu_Karogs.png" width="400" alt="Cēsu pilsētas Karogs">
     <h4> Cēsis ir pilsēta Latvijā. Tā izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
         Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. 
         Cēsis ir viena no vecākajām pilsētām Latvijā, Hanzas savienības pilsēta un viena no Livonijas ordeņa mestru rezidencēm. 
@@ -35,13 +35,16 @@
     <li>Ungurmuiža</li>
     <li>Līču – Laņģu klintis</li>
   </ul>
+  <p>Top 3 pasākumi, kas notiek Cēsu pilsētā:</p>
+  <ol>
+    <li>Cēsu mākslas festivāls</li>
+    <li>Sarunu festivāls "Lampa"</li>
+    <li>Čella festivāls "Čello"</li>
+  </ol>
 
-  
 </main>
  <footer>
-    <a href="#up">
-        <img src="img/up.png" width="20" alt="bulta uz augšu"
-    ></a>
+    <a href="#up">Uz augšu</a>
  </footer>
 
 </body>
