Added_Cesu_atteli

--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
 
 </main>
  <footer>
-    <a href="#up">Uz augšu</a>
+<p>Skaistākie Cēsu pilsētas skati:</p>
+<img src="cesisattels3.jpg" width="100" alt="Cēsu pilsēta">
+<img src="cesisattels2.jpg" width="100" alt="Cēsu pils">
+<img src="cesisattels1.jpg" width="100" alt="Cēsu pils parks">
+<img src="cesisattels4.jpg" width="100" alt="Rīgas iela">
+<img src="cesisattels5.jpg" width="100" alt="KoncertzāleCēsis">
+<img src="cesisattels6.jpg" width="100" alt="Rožu laukums">
+    
+<a href="#up">Uz augšu</a>
  </footer>
-
 </body>
 </html>
