changed color of h3

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <header>
     <h1 id="up">Cēsis</h1>
-    <h3>Pilsēta Latvijā</h3>
+    <h3 style="color: blue;">Pilsēta Latvijā, te ir tās ģērbonis un karogs.</h3>
     <img src="Cesis_gerb.png" width="174" hight="200" alt="Cēsu pilsētas ģērbonis">
     <img src="Cesu_Karogs.png" width="400" hight="200" alt="Cēsu pilsētas Karogs">
     <h4> Cēsis ir pilsēta Latvijā. Tā izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
