--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Iveta Jaunzema HMNr01</title>
 </head>
 <header>
-    <h1 id="up">Cēsis</h1>
-    <h3 style="color: blue;">Pilsēta Latvijā, te ir tās ģērbonis un karogs.</h3>
+    <h1 id="up">Cēsis..</h1>
+    <h3 style="color: blue;">..pilsēta Latvijā. Te ir Cēsu pilsētas ģērbonis un karogs.</h3>
     <img src="Cesis_gerb.png" width="174" hight="200" alt="Cēsu pilsētas ģērbonis">
     <img src="Cesu_Karogs.png" width="400" hight="200" alt="Cēsu pilsētas Karogs">
-    <h4> Cēsis ir pilsēta Latvijā. Tā izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
+    <h4> Cēsu pilsēta izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
         Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. 
         Cēsis ir viena no vecākajām pilsētām Latvijā, Hanzas savienības pilsēta un viena no Livonijas ordeņa mestru rezidencēm. 
         Cēsis ir Latvijas karoga dzimtene.</h4>
