--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <h3 style="color: blue;">..pilsēta Latvijā. Te ir Cēsu pilsētas ģērbonis un karogs.</h3>
     <img src="Cesis_gerb.png" width="174" hight="200" alt="Cēsu pilsētas ģērbonis">
     <img src="Cesu_Karogs.png" width="400" hight="200" alt="Cēsu pilsētas Karogs">
-    <h4> Cēsu pilsēta izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
+    <hr>
+    <h4> Cēsu pilsēta ir izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
         Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. 
         Cēsis ir viena no vecākajām pilsētām Latvijā, Hanzas savienības pilsēta un viena no Livonijas ordeņa mestru rezidencēm. 
         Cēsis ir Latvijas karoga dzimtene.</h4>
+    <hr>
 </header>
 
 <body>
@@ -53,7 +55,7 @@
 <img src="cesisattels5.jpg" width="200" alt="KoncertzāleCēsis">
 <img src="cesisattels6.jpg" width="200" alt="Rožu laukums">
 <br>
-<a href="#up">Uz augšu</a>
+<a href="up">Uz augšu</a>
  </footer>
 </body>
 </html>
