Added some underline

--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
     <h3 style="color: blue;">..pilsēta Latvijā. Te ir Cēsu pilsētas ģērbonis un karogs.</h3>
     <img src="Cesis_gerb.png" width="174" hight="200" alt="Cēsu pilsētas ģērbonis">
     <img src="Cesu_Karogs.png" width="400" hight="200" alt="Cēsu pilsētas Karogs">
+</header>
+<body>
     <hr>
     <h4> Cēsu pilsēta ir izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
         Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. 
         Cēsis ir viena no vecākajām pilsētām Latvijā, Hanzas savienības pilsēta un viena no Livonijas ordeņa mestru rezidencēm. 
         Cēsis ir Latvijas karoga dzimtene.</h4>
     <hr>
-</header>
-
-<body>
     <main>
 <p>Spied šeit, lai uzzinātu par Cēsu pilsētas vēsturi
 <a href="https://lv.wikipedia.org/wiki/C%C4%93sis"target="_blank">Cēsu vēsture</a>.</p>
 
-<p>Insteresantākās vietas, kuras apskatīt Cēsīs un Cēsu rajonā:</p>
+<p><u>Insteresantākās vietas, kuras apskatīt Cēsīs un Cēsu rajonā:</u></p>
   <ul>
     <li>Cēsu pils komplekss</li>
     <li>Cēsu Vecpilsēta</li>
@@ -37,17 +36,16 @@
     <li>Ungurmuiža</li>
     <li>Līču – Laņģu klintis</li>
   </ul>
-  <p>Top 3 pasākumi, kas notiek Cēsu pilsētā:</p>
+  <p><u>Top 3 pasākumi, kas notiek Cēsu pilsētā:</u></p>
   <ol>
     <li>Cēsu mākslas festivāls</li>
     <li>Sarunu festivāls "Lampa"</li>
     <li>Čella festivāls "Čello"</li>
   </ol>
-
 </main>
 <br>
  <footer>
-<p>Skaistākie Cēsu pilsētas skati:</p>
+<p><u>Skaistākie Cēsu pilsētas skati:</u></p>
 <img src="cesisattels3.jpg" width="200" alt="Cēsu pilsēta">
 <img src="cesisattels2.jpg" width="200" alt="Cēsu pils">
 <img src="cesisattels1.jpg" width="200" alt="Cēsu pils parks">
