--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <img src="cesisattels5.jpg" width="200" alt="KoncertzāleCēsis">
 <img src="cesisattels6.jpg" width="200" alt="Rožu laukums">
 <br>
-<a href="up">Uz augšu</a>
+<a href="#up">Uz augšu</a>
  </footer>
 </body>
 </html>
