--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Iveta Jaunzema HMNr01</title>
+    <title>Iveta Jaunzema HWNr01</title>
 </head>
 <header>
     <h1 id="up">Cēsis..</h1>
