--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <header>
     <h1 id="up">Cēsis..</h1>
     <h3 style="color: blue;">..pilsēta Latvijā. Te ir Cēsu pilsētas ģērbonis un karogs.</h3>
-    <img src="Cesis_gerb.png" width="174" hight="200" alt="Cēsu pilsētas ģērbonis">
-    <img src="Cesu_Karogs.png" width="400" hight="200" alt="Cēsu pilsētas Karogs">
+    <img src="Cesis_gerb.png" width="174" alt="Cēsu pilsētas ģērbonis">
+    <img src="Cesu_Karogs.png" width="400" alt="Cēsu pilsētas Karogs">
 </header>
 <body>
     <hr>
