--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Iveta Jaunzema HMNr01</title>
-    <link rel="images" href="img"/>
+   
 </head>
 <body>
 <header>
     <h1 id="up">Cēsis..</h1>
     <h3 style="color: blue;">..pilsēta Latvijā. Te ir Cēsu pilsētas ģērbonis un karogs.</h3>
-    <img src="Cesis_gerb.png" width="174" alt="Cēsu pilsētas ģērbonis">
-    <img src="Cesu_Karogs.png" width="400" alt="Cēsu pilsētas Karogs">
+    <img src="img/Cesis_gerb.png" width="174" alt="Cēsu pilsētas ģērbonis">
+    <img src="img/Cesu_Karogs.png" width="400" alt="Cēsu pilsētas Karogs">
 </header>
     <hr>
     <h4> Cēsu pilsēta ir izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
@@ -47,12 +47,12 @@
 <br>
  <footer>
 <p><u>Skaistākie Cēsu pilsētas skati:</u></p>
-<img src="cesisattels3.jpg" width="200" alt="Cēsu pilsēta">
-<img src="cesisattels2.jpg" width="200" alt="Cēsu pils">
-<img src="cesisattels1.jpg" width="200" alt="Cēsu pils parks">
-<img src="cesisattels4.jpg" width="200" alt="Rīgas iela">
-<img src="cesisattels5.jpg" width="200" alt="KoncertzāleCēsis">
-<img src="cesisattels6.jpg" width="200" alt="Rožu laukums">
+<img src="img/cesisattels3.jpg" width="200" alt="Cēsu pilsēta">
+<img src="img/cesisattels2.jpg" width="200" alt="Cēsu pils">
+<img src="img/cesisattels1.jpg" width="200" alt="Cēsu pils parks">
+<img src="img/cesisattels4.jpg" width="200" alt="Rīgas iela">
+<img src="img/cesisattels5.jpg" width="200" alt="KoncertzāleCēsis">
+<img src="img/cesisattels6.jpg" width="200" alt="Rožu laukums">
 <br>
 <a href="#up">Uz augšu</a>
  </footer>
