Added map and style

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
 <header>
-    <h1 id="up">Cēsis..</h1>
+    <h1 class=cesis id="up">Cēsis..</h1>
     <h3 style="color: blue;">..pilsēta Latvijā. Te ir Cēsu pilsētas ģērbonis un karogs.</h3>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34474.743748100875!2d25.23178407457741!3d57.313467538607604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ebe1888e6dedf1%3A0x400cfcd68f30930!2zQ8STc2lzLCBDxJNzdSBwaWxzxJN0YQ!5e0!3m2!1slv!2slv!4v1589721624210!5m2!1slv!2slv" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <br>
     <img src="img/Cesis_gerb.png" width="174" alt="Cēsu pilsētas ģērbonis">
     <img src="img/Cesu_Karogs.png" width="400" alt="Cēsu pilsētas Karogs">
-</header>
+  </header>
     <hr>
     <h4> Cēsu pilsēta ir izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
         Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. 
