some visual changes..background etc.

--- a/index.html
+++ b/index.html
@@ -5,28 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Iveta Jaunzema HMNr01</title>
+    <link rel="stylesheet" href="style/style.css">
    
 </head>
 <body>
 <header>
-    <h1 class=cesis id="up">Cēsis..</h1>
-    <h3 style="color: blue;">..pilsēta Latvijā. Te ir Cēsu pilsētas ģērbonis un karogs.</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34474.743748100875!2d25.23178407457741!3d57.313467538607604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ebe1888e6dedf1%3A0x400cfcd68f30930!2zQ8STc2lzLCBDxJNzdSBwaWxzxJN0YQ!5e0!3m2!1slv!2slv!4v1589721624210!5m2!1slv!2slv" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <h1 class=main-name id="up">Cēsis..</h1>
+    <h3>..skaistākā pilsēta Latvijā. Te ir Cēsu pilsētas izvietojums kartē:</h3>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34474.743748100875!2d25.23178407457741!3d57.313467538607604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ebe1888e6dedf1%3A0x400cfcd68f30930!2zQ8STc2lzLCBDxJNzdSBwaWxzxJN0YQ!5e0!3m2!1slv!2slv!4v1589721624210!5m2!1slv!2slv" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     <br>
+    <h3>Šeit ir pilsētas ģērbonis un karogs:</h3>
     <img src="img/Cesis_gerb.png" width="174" alt="Cēsu pilsētas ģērbonis">
     <img src="img/Cesu_Karogs.png" width="400" alt="Cēsu pilsētas Karogs">
-  </header>
     <hr>
     <h4> Cēsu pilsēta ir izvietojusies Vidzemes augstienes ziemeļu daļā un ir Cēsu novada administratīvais centrs. 
         Cēsis atrodas 90 km no Rīgas. Gar pilsētu plūst Gaujas upe. 
         Cēsis ir viena no vecākajām pilsētām Latvijā, Hanzas savienības pilsēta un viena no Livonijas ordeņa mestru rezidencēm. 
         Cēsis ir Latvijas karoga dzimtene.</h4>
     <hr>
+  </header>
     <main>
-<p>Spied šeit, lai uzzinātu par Cēsu pilsētas vēsturi
-<a href="https://lv.wikipedia.org/wiki/C%C4%93sis" target="_blank">Cēsu vēsture</a>.</p>
+<p><b>Spied šeit, lai uzzinātu par Cēsu pilsētas vēsturi
+<a href="https://lv.wikipedia.org/wiki/C%C4%93sis" target="_blank">Cēsu vēsture</b></a>.</p>
 
-<p><u>Insteresantākās vietas, kuras apskatīt Cēsīs un Cēsu rajonā:</u></p>
+<p><u><b>Insteresantākās vietas, kuras apskatīt Cēsīs un Cēsu rajonā:</b></u></p>
   <ul>
     <li>Cēsu pils komplekss</li>
     <li>Cēsu Vecpilsēta</li>
@@ -39,7 +41,7 @@
     <li>Ungurmuiža</li>
     <li>Līču – Laņģu klintis</li>
   </ul>
-  <p><u>Top 3 pasākumi, kas notiek Cēsu pilsētā:</u></p>
+  <p><u><b>Top 3 pasākumi, kas notiek Cēsu pilsētā:</b></u></p>
   <ol>
     <li>Cēsu mākslas festivāls</li>
     <li>Sarunu festivāls "Lampa"</li>
@@ -48,15 +50,16 @@
 </main>
 <br>
  <footer>
-<p><u>Skaistākie Cēsu pilsētas skati:</u></p>
-<img src="img/cesisattels3.jpg" width="200" alt="Cēsu pilsēta">
-<img src="img/cesisattels2.jpg" width="200" alt="Cēsu pils">
-<img src="img/cesisattels1.jpg" width="200" alt="Cēsu pils parks">
-<img src="img/cesisattels4.jpg" width="200" alt="Rīgas iela">
-<img src="img/cesisattels5.jpg" width="200" alt="KoncertzāleCēsis">
-<img src="img/cesisattels6.jpg" width="200" alt="Rožu laukums">
+<p><u><i>Skaistākie Cēsu pilsētas skati:</i></u></p>
+<img src="img/cesisattels3.jpg" width="180" height ="120" alt="Cēsu pilsēta">
+<img src="img/cesisattels2.jpg" width="180" height ="120" alt="Cēsu pils">
+<img src="img/cesisattels1.jpg" width="180" height ="120" alt="Cēsu pils parks">
+<img src="img/cesisattels4.jpg" width="180" height ="120" alt="Rīgas iela">
+<img src="img/cesisattels5.jpg" width="180" height ="120" alt="KoncertzāleCēsis">
+<img src="img/cesisattels6.jpg" width="180" height ="120" alt="Rožu laukums">
 <br>
 <a href="#up">Uz augšu</a>
+<p>C2020</p>
  </footer>
 </body>
 </html>
