--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
     <h1 class=main-name id="up">Cēsis..</h1>
     <h3>..skaistākā pilsēta Latvijā. Te ir Cēsu pilsētas izvietojums kartē:</h3>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34474.743748100875!2d25.23178407457741!3d57.313467538607604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ebe1888e6dedf1%3A0x400cfcd68f30930!2zQ8STc2lzLCBDxJNzdSBwaWxzxJN0YQ!5e0!3m2!1slv!2slv!4v1589721624210!5m2!1slv!2slv" width="300" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    <iframe class=iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34474.743748100875!2d25.23178407457741!3d57.313467538607604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46ebe1888e6dedf1%3A0x400cfcd68f30930!2zQ8STc2lzLCBDxJNzdSBwaWxzxJN0YQ!5e0!3m2!1slv!2slv!4v1589721624210!5m2!1slv!2slv"></iframe>
     <br>
     <h3>Šeit ir pilsētas ģērbonis un karogs:</h3>
     <img src="img/Cesis_gerb.png" width="174" alt="Cēsu pilsētas ģērbonis">
@@ -26,7 +26,7 @@
   </header>
     <main>
 <p><b>Spied šeit, lai uzzinātu par Cēsu pilsētas vēsturi
-<a href="https://lv.wikipedia.org/wiki/C%C4%93sis" target="_blank">Cēsu vēsture</b></a>.</p>
+<a href="https://lv.wikipedia.org/wiki/C%C4%93sis" target="_blank">Cēsu vēsture</a>.</b></p>
 
 <p><u><b>Insteresantākās vietas, kuras apskatīt Cēsīs un Cēsu rajonā:</b></u></p>
   <ul>
